unpackaged/main/default/objects/FSL_Service_Territory_STM_Rule__c/FSL_Service_Territory_STM_Rule__c.object-meta.xml
<CustomObject>
    <label>Service Territory STM Rule</label>
    <nameField>
        <displayFormat>Rule-{000000}</displayFormat>
        <label>STM Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Territory STM Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>