unpackaged/main/default/objects/FSL_Service_Territory_STM_Rule__c/fields/Of_Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Of_Service_Territory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Secondary Members of service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Service Territory STM Rules (Of Service Territory)</relationshipLabel>
    <relationshipName>Service_Territory_STM_Rules1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>