unpackaged/main/default/objects/FSL_Service_Territory_STM_Rule__c/fields/Primary_Service_Territory_Member_s_Of__c.field-meta.xml
<CustomField>
    <fullName>Primary_Service_Territory_Member_s_Of__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Provide the territory of those primary and its sibling primary STM&#39;s can become STM&#39;s of the given &#39;of Service Territory&#39;</inlineHelpText>
    <label>Primary Service Territory Member&#39;s Of</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Service Territory STM Rules</relationshipLabel>
    <relationshipName>Service_Territory_STM_Rules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>