unpackaged/main/default/objects/FSL_Service_Territory_STM_Rule__c/fields/Rule_Unique__c.field-meta.xml
<CustomField>
    <fullName>Rule_Unique__c</fullName>
    <formula>Primary_Service_Territory_Member_s_Of__r.Id+&#39;_&#39;+ Of_Service_Territory__r.Id</formula>
    <label>Rule Unique</label>
    <type>Text</type>
</CustomField>